--- a/blog.html
+++ b/blog.html
@@ -2,15 +2,19 @@
 # blog page must be named index.html and in its own folder to support pagination
 # https://jekyllrb.com/docs/pagination/
 layout: page
+lang: English
+ref: blog
 title: Blog
 pagination:
   enabled: true
 ---
 <section class="list">
-	{% if site.posts.size == 0 %}
+	{% assign posts=site.posts | where:"lang", page.lang | where:"category", "blog" %}
+	{% if posts.size == 0 %}
 		<p class="text-center">Nothing published yet!</p>
 	{% elsif site.pagination.enabled %}
-		{% for post in paginator.posts %}
+		{% assign posts=paginator.posts | where:"lang", page.lang %}
+		{% for post in posts %}
 			{% if post.category == 'blog' %}
 				{% if post.hidden != true %}
 					{% include blog-post.html %}
@@ -20,7 +24,8 @@ pagination:
 
 		{% include pagination.html%}
 	{% else %}
-		{% for post in site.posts %}
+		{% assign posts=site.posts | where:"lang", page.lang %}
+		{% for post in posts %}
 			{% if post.category == 'blog' %}
 				{% if post.hidden != true %}
 					{% include blog-post.html %}
